# oz_cording-school_asign

./: QUIZ_2.ipynb
DB_과제/: DB_QUIZ.3.sql  DB_예시.sql  QUIZ_1.ipynb  airbnb_pymysql.py  mong_QUIZ.py  pymongodb.py  yes24.sql  몽고DB_test.ipynb
django/class/blog/: db.sqlite3  pyproject.toml
django/class/blog/blog/: admin.py  forms.py  models.py  views.py
django/class/blog/blog/migrations/: 0001_initial.py  0002_blog_author.py
django/class/blog/config/: settings.py  urls.py
django/class/blog/member/: views.py
django/class/blog/templates/: base.html  blog_create.html  blog_detail.html  blog_list.html  blog_update.html
django/class/blog/templates/registration/: login.html  signup.html
django/django_assignment/django_asign_5/: db.sqlite3  pyproject.toml
django/django_assignment/django_asign_5/config/: settings.py  urls.py
django/django_assignment/django_asign_5/templates/todo/: todo_info.html  todo_list.html
django/django_assignment/django_asign_5/todo/: admin.py  models.py  views.py
django_asign_4/: pyproject.toml
django_asign_4/config/: settings.py  urls.py
django_asign_4/templates/: todo.html  todo_create.html  user_detail.html  users.html
django_asign_4/templates/registration/: signup.html
django_asign_4/todo/: forms.py  urls.py
django_study/: .python-version  pyproject.toml
flask_mysql/: user_routes.py
project.1/: join.html  project_1.js
pymysql/: test_pymysql.py
yes24/: flask_mysql.sql  sakilaSQL.sql  yes24.sql  yes24_crawl.ipynb
깃/: main.py  깃.code-workspace
리눅스/: linux_0113(문제).ipynb  linux_1426.ipynb
초급반/: nuka.py
(+150 files in other folders)
