[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["raphaehell <raphaehell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipython = "^8.26.0"
django-extensions = "^3.2.3"
django = "^5.1"
django-summernote = "^0.8.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
